--- a/design.css
+++ b/design.css
@@ -1,3 +1,6 @@
+*{
+  font-family: 'Roboto', sans-serif;
+}
 .header{
   margin-left: auto;
   margin-right: auto;
@@ -10,6 +13,8 @@
 .table{
   margin-left: auto;
   margin-right: auto;
+  margin-top: 30px;
+  margin-top: 30px;
   text-align: center;
 }
 .table table {
@@ -23,7 +28,7 @@
     margin-right: auto;
 }
 
-.table td, th { border: 1px solid #CCC; height: 30px; } /* Make cells a bit taller */
+.table td, th { border: 1px solid #CCC; height: 30px; padding: 10px;} /* Make cells a bit taller */
 
 .table th {
     background: #F3F3F3; /* Light grey background */
